[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml] >= 6.2",
    "setuptools_scm_git_archive",
    "wheel >= 0.37.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "pizone/version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
